# cmake-playground

.github/workflows/: ci.yml
bracket-regex/: CMakeLists.txt
failing-test/: CMakeLists.txt
simple-app/: CMakeLists.txt  main.cpp
